--- a/admin.html
+++ b/admin.html
@@ -311,7 +311,6 @@
 
     window.addEventListener("error", (e) => {
       statusEl.innerText = "JS error: " + e.message;
-      // Don't force status lights to red here; could be unrelated UI error.
     });
 
     window.addEventListener("unhandledrejection", (e) => {
@@ -367,9 +366,17 @@
         const roleRaw = (data.role || "").toLowerCase();
         const isOwner = data.owner === true;
         const isHead = roleRaw.includes("head") || data.headsteward === true || isOwner;
+        const isSimgrid = roleRaw.includes("simgrid");
 
         statusEl.innerText = "Access OK. Redirecting…";
-        window.location.href = isHead ? "headsteward.html" : "steward.html";
+
+        if (isSimgrid) {
+          window.location.href = "overview.html";
+        } else if (isHead) {
+          window.location.href = "headsteward.html";
+        } else {
+          window.location.href = "steward.html";
+        }
 
       } catch (e) {
         statusEl.innerText = "Login failed: " + e.message;
